<?xml version="1.0"?>
<package format="3">
  <name>dmap_navigation</name>
  <version>1.0.0</version>
  <description>DMap based Localization and Planning Project</description>
  <maintainer email="student@studenti.uniroma1.it">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen</depend> <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>