<?xml version="1.0"?>
<package format="3">
  <name>rp_simulator</name>
  <version>0.0.1</version>
  <description>Programmable Robotics Simulator</description>
  <maintainer email="zezza.2067707@studenti.uniroma1.it">utente</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rp_commons</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>